--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Kalyani | Front-End Developer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Hello, I'm Kalyani 👋</h1>
