--- a/index.html
+++ b/index.html
@@ -5,7 +5,38 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, I'm Kalyani 👋</h1>
-  <p>Front-End Developer</p>
+  <header>
+    <h1>Kalyani Pottipati</h1>
+    <p>Front-End Developer</p>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I am an entry-level Front-End Developer skilled in HTML, CSS, JavaScript, 
+      and React. I enjoy building responsive and user-friendly web applications.
+    </p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>React</li>
+      <li>Git & GitHub</li>
+    </ul>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <p>More projects coming soon 🚀</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: kalyanipottipati@gmail.com</p>
+  </section>
 </body>
 </html>
